--- a/src/main/webapp/WEB-INF/views/admin/application.html
+++ b/src/main/webapp/WEB-INF/views/admin/application.html
@@ -255,7 +255,6 @@
             </div>
         </div>
     </form>
-
     <!-- Modal CV -->
     <div class="modal fade" id="cvModal" tabindex="-1" aria-labelledby="cvModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable modal-xl">
@@ -270,14 +269,9 @@
                     <p class="text-center text-muted">Đang tải CV...</p>
                 </div>
 
-<!--                <div class="modal-footer">-->
-<!--                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>-->
-<!--                </div>-->
             </div>
         </div>
     </div>
-
-
     <!-- Interview Modal -->
     <form th:action="@{/admin/application/schedule-interview}" method="post">
         <input type="hidden" name="applicationId" id="applicationId" />
@@ -302,9 +296,12 @@
 
                         <!-- Interview Time -->
                         <div class="mb-3">
-                            <label for="interviewTime" class="form-label fw-semibold">Interview Time <span class="text-danger">*</span></label>
-                            <input type="datetime-local" id="interviewTime" name="time" class="form-control" required>
+                            <label for="interviewTime" class="form-label fw-semibold">
+                                Interview Time <span class="text-danger">*</span>
+                            </label>
+                            <input type="datetime-local" id="interviewTime" name="time" class="form-control" required />
                         </div>
+
                     </div>
 
                     <!-- Modal Footer -->
